# pythonge2-a-mini-projet-mini-project

./: .gitignore  README.md  kwh_price.csv  main.py  pyproject.toml
Filters/components/passives/: band_pass.py  band_stop.py  high_pass.py  low_pass.py
Filters/composant/Passif/: low_pass.py
Filters/composants/passives/: band_stop.py  high_pass.py  low_pass.py  passives_filters.py
docs/: table.csv
documents/: Django-Manim-project.md  TODO.md  django_info.md  structure_projet.md
filters/: __init__.py  __main__.py
filters-temp/components/actives/: filter.py
filters-temp/components/passives/: high_pass.py
filters/choice/: __init__.py
filters/data/: table.csv
filters/passives/: __init__.py  band_pass.py  band_stop.py  high_pass.py  low_pass.py
filters/snk/: __init__.py  bessel.py  butterworth.py  tchebychev.py
manim_site/: db.sqlite3  manage.py  temp.py
manim_site/EstebanCinelli/: test.py
manim_site/EstebanCinelli/media/Tex/: 0a4cc5a6382706f0.tex  0cfce2fb2784e921.tex  3131ad67c4c6340d.tex  390e7b118431f274.tex  40d4739722aa085b.tex  (+8 more)
manim_site/manim_project/: apps.py  urls.py  views.py
manim_site/manim_project/utils/: generate_video.py
manim_site/manim_site/: asgi.py  settings.py  urls.py  wsgi.py
manim_site/media/pre_coded/: manim_script_1.py  manim_script_3.py
powerplant/: __init__.py  __main__.py  price.py
powerplant/classes/: __init__.py  cabelgame_1.0.py  colors.py  dynamo.py  interface.py  invest.py  jeux_cable.py  jeux_sinus.py  marketing.py  price.py  production.py  storage.py
tests/: test_components.py  test_passives.py  test_tchebychev.py
(+6 files in other folders)
